Ya incluye lo de ofertas
